updated json file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "cSpell.words": ["Prakash", "Sowmya"]
+  "cSpell.words": [
+    "devapujyula",
+    "mainstreet",
+    "Prakash",
+    "Sowmya",
+    "underscroll"
+  ]
 }
